--- a/index.html
+++ b/index.html
@@ -324,114 +324,31 @@
     <!-- Navigation -->
     <nav>
         <ul>
-            <li><a href="#home">Home</a></li>
-            <li><a href="#features">Features</a></li>
-            <li><a href="#pricing">Pricing</a></li>
-            <li><a href="#contact">Contact</a></li>
+            <li><a href="#home">InstaBloom</a></li>
+            <li><a href="https://instagram.com/instabloom_gt" target="_blank">Instagram</a></li>
+            <li><a href="https://tiktok.com/@instabloom.gt" target="_blank">TikTok</a></li>
+            <li><a href="https://wa.me/50242911090?text=Hello%20InstaBloom!" target="_blank">💬 WhatsApp</a></li>
         </ul>
     </nav>
 
-    <!-- Hero Section -->
+    <!-- Hero Section - Placeholder -->
     <section id="home" class="hero">
         <h1>🌸 InstaBloom</h1>
-        <p>Grow Your Instagram Presence Authentically</p>
+        <p>Coming Soon...</p>
+        <p style="font-size: 1rem; opacity: 0.9; margin-top: 1rem;">We're working on something amazing. Stay tuned!</p>
         <div class="hero-buttons">
-            <button class="btn btn-primary">Get Started Free</button>
-            <button class="btn btn-secondary">Learn More</button>
+            <a href="https://wa.me/50242911090?text=Hello%20InstaBloom!" class="btn btn-primary">💬 Contact us on WhatsApp</a>
         </div>
-    </section>
-
-    <!-- Features Section -->
-    <section id="features" class="features">
-        <h2 class="section-title">Why Choose InstaBloom?</h2>
-        <div class="features-grid">
-            <div class="feature-card">
-                <div class="feature-icon">📊</div>
-                <h3>Analytics</h3>
-                <p>Get detailed insights into your audience engagement and growth trends with real-time analytics.</p>
-            </div>
-            <div class="feature-card">
-                <div class="feature-icon">🎯</div>
-                <h3>Smart Targeting</h3>
-                <p>Reach the right audience with our AI-powered targeting system designed for maximum engagement.</p>
-            </div>
-            <div class="feature-card">
-                <div class="feature-icon">📅</div>
-                <h3>Content Scheduling</h3>
-                <p>Plan and schedule your posts in advance to maintain consistent presence and optimal posting times.</p>
-            </div>
-            <div class="feature-card">
-                <div class="feature-icon">🤖</div>
-                <h3>AI Assistant</h3>
-                <p>Generate captivating captions and hashtags powered by advanced AI to boost your engagement.</p>
-            </div>
-            <div class="feature-card">
-                <div class="feature-icon">👥</div>
-                <h3>Community Management</h3>
-                <p>Manage all your interactions in one place with our unified commenting and messaging system.</p>
-            </div>
-            <div class="feature-card">
-                <div class="feature-icon">🔒</div>
-                <h3>Security</h3>
-                <p>Your data is safe with enterprise-grade encryption and compliance with all privacy standards.</p>
-            </div>
-        </div>
-    </section>
-
-    <!-- Pricing Section -->
-    <section id="pricing" class="pricing">
-        <h2 class="section-title">Simple, Transparent Pricing</h2>
-        <div class="pricing-grid">
-            <div class="pricing-card">
-                <h3>Starter</h3>
-                <div class="price">$9<span class="price-period">/month</span></div>
-                <ul class="pricing-features">
-                    <li>✓ Basic Analytics</li>
-                    <li>✓ 5 Scheduled Posts</li>
-                    <li>✓ Community Support</li>
-                    <li>✗ AI Assistant</li>
-                    <li>✗ Priority Support</li>
-                </ul>
-                <button class="btn btn-primary">Get Started</button>
-            </div>
-            <div class="pricing-card featured">
-                <h3>Professional</h3>
-                <div class="price">$29<span class="price-period">/month</span></div>
-                <ul class="pricing-features">
-                    <li>✓ Advanced Analytics</li>
-                    <li>✓ Unlimited Posts</li>
-                    <li>✓ AI Assistant</li>
-                    <li>✓ Smart Targeting</li>
-                    <li>✓ Email Support</li>
-                </ul>
-                <button class="btn btn-primary">Get Started</button>
-            </div>
-            <div class="pricing-card">
-                <h3>Enterprise</h3>
-                <div class="price">Custom<span class="price-period"></span></div>
-                <ul class="pricing-features">
-                    <li>✓ Everything in Pro</li>
-                    <li>✓ Dedicated Account Manager</li>
-                    <li>✓ Custom Integrations</li>
-                    <li>✓ Priority Support</li>
-                    <li>✓ Advanced Features</li>
-                </ul>
-                <button class="btn btn-primary">Contact Sales</button>
-            </div>
-        </div>
-    </section>
-
-    <!-- CTA Section -->
-    <section id="contact" class="cta">
-        <h2>Ready to Bloom?</h2>
-        <p>Join thousands of creators growing their Instagram presence with InstaBloom</p>
-        <button class="btn btn-primary">Start Your Free Trial</button>
     </section>
 
     <!-- Footer -->
     <footer>
         <p>&copy; 2025 InstaBloom. All rights reserved.</p>
-        <p><a href="#">Privacy Policy</a> | <a href="#">Terms of Service</a> | <a href="#">Contact Us</a></p>
+        <p>
+            <a href="https://instagram.com/instabloom_gt" target="_blank">📷 Instagram</a> | 
+            <a href="https://tiktok.com/@instabloom.gt" target="_blank">🎵 TikTok</a> | 
+            <a href="https://wa.me/50242911090?text=Hello%20InstaBloom!" target="_blank">💬 WhatsApp</a>
+        </p>
     </footer>
 </body>
 </html>
