add color pallete

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
         /* Navigation */
         nav {
-            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+            background: linear-gradient(135deg, #FF97AD 0%, #CF1520 100%);
             padding: 1rem 2rem;
             position: sticky;
             top: 0;
@@ -48,7 +48,7 @@
 
         /* Hero Section */
         .hero {
-            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+            background: linear-gradient(135deg, #FF97AD 0%, #CF1520 100%);
             color: white;
             padding: 8rem 2rem;
             text-align: center;
@@ -140,7 +140,7 @@
         /* Features Section */
         .features {
             padding: 5rem 2rem;
-            background: #f8f9fa;
+            background: #FCF2CE;
         }
 
         .section-title {
@@ -178,7 +178,7 @@
         }
 
         .feature-card h3 {
-            color: #667eea;
+            color: #CF1520;
             margin-bottom: 1rem;
             font-size: 1.5rem;
         }
@@ -212,13 +212,13 @@
         }
 
         .pricing-card:hover {
-            border-color: #667eea;
+            border-color: #FF97AD;
             transform: scale(1.05);
-            box-shadow: 0 10px 30px rgba(102, 126, 234, 0.2);
+            box-shadow: 0 10px 30px rgba(255, 151, 173, 0.2);
         }
 
         .pricing-card.featured {
-            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+            background: linear-gradient(135deg, #5E9132 0%, #AFC348 100%);
             color: white;
             transform: scale(1.05);
         }
@@ -256,7 +256,7 @@
 
         /* CTA Section */
         .cta {
-            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+            background: linear-gradient(135deg, #FF97AD 0%, #CF1520 100%);
             color: white;
             padding: 4rem 2rem;
             text-align: center;
@@ -287,7 +287,7 @@
         }
 
         footer a {
-            color: #667eea;
+            color: #FF97AD;
             text-decoration: none;
         }
 
