--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
                             <li>• Hasta 3 horas de servicio</li>
                             <li>• Montaje y desmontaje incluido</li>
                         </ul>
-                        <div class="mt-6">
+                        <div class="mt-6 text-center">
                             <a href="https://wa.me/50242911090?text=Hola%20InstaBloom%2C%20quiero%20cotizar%20un%20evento%20para%20[fecha]%20con%20[servicio]."
                                 target="_blank"
                                 class="inline-block px-4 py-2 rounded-full bg-[color:var(--brand-pink)] text-[color:var(--brand-red)] font-semibold text-sm">Cotizar
@@ -195,7 +195,7 @@
                                 <li>• Personalización de interfaz</li>
                                 <li>• Montaje y desmontaje profesional</li>
                             </ul>
-                            <div class="mt-6">
+                            <div class="mt-6 text-center">
                                 <a href="https://wa.me/50242911090?text=Hola%20InstaBloom%2C%20quiero%20cotizar%20un%20evento%20para%20[fecha]%20con%20[servicio]."
                                     target="_blank"
                                     class="inline-block px-4 py-2 rounded-full bg-[color:var(--brand-red)] text-white font-semibold text-sm hover:bg-[#a01119] transition">Cotizar
@@ -216,7 +216,7 @@
                             <li>• Galería virtual</li>
                             <li>• Interfaz personalizada</li>
                         </ul>
-                        <div class="mt-6">
+                        <div class="mt-6 text-center">
                             <a href="https://wa.me/50242911090?text=Hola%20InstaBloom%2C%20quiero%20cotizar%20un%20evento%20para%20[fecha]%20con%20[servicio]."
                                 target="_blank"
                                 class="inline-block px-4 py-2 rounded-full bg-[color:var(--brand-pink)] text-[color:var(--brand-red)] font-semibold text-sm">Cotizar
