--- a/index.html
+++ b/index.html
@@ -102,13 +102,13 @@
             <img src="assets/header_photo.JPG" alt="InstaBloom - header"
                 class="absolute inset-0 w-full h-full object-cover brightness-75" />
             <div
-                class="absolute inset-0 bg-gradient-to-b from-[color:var(--brand-red)]/70 to-[color:var(--brand-red)]/60">
+                class="absolute inset-0 bg-gradient-to-b from-black/50 to-black/40">
             </div>
 
             <div class="relative z-10 max-w-2xl mx-auto text-center px-6 py-28">
                 <h1 class="text-3xl sm:text-4xl md:text-5xl font-extrabold text-white mt-4">El spot más fotografiado de
                     tu evento.</h1>
-                <p class="mt-4 text-white/90 text-base sm:text-lg">Creamos los spots más premium e instagrameables de
+                <p class="mt-4 text-white/90 text-base sm:text-lg">Creamos los spots más premium e inolvidables de
                     Guatemala.</p>
                 <p class="mt-2 text-white/80 text-sm">Paquetes desde Q1,500</p>
 
@@ -127,8 +127,8 @@
         <!-- Gallery / Experience -->
         <section id="galeria" class="py-12 bg-[color:var(--cream)]">
             <div class="max-w-3xl mx-auto px-4">
-                <h2 class="text-center text-2xl font-bold mb-4">Creamos experiencias instagrameables</h2>
-                <p class="text-center text-sm text-gray-600 mb-6">Para bodas, lanzamientos, cumpleaños y eventos
+                <h2 class="text-center text-2xl font-bold mb-4">Creamos experiencias inolvidables</h2>
+                <p class="text-center text-sm text-gray-600 mb-6">Para bodas, graduaciones, cumpleaños y eventos
                     corporativos.</p>
 
                 <!-- Grid of placeholders -->
@@ -253,8 +253,8 @@
 
                     <details class="bg-white p-4 rounded shadow">
                         <summary class="font-medium">¿Cómo pago?</summary>
-                        <p class="mt-2 text-sm text-gray-600">Aceptamos transferencias y pagos con tarjeta. Emitimos
-                            factura electrónica FEL cuando se solicita.</p>
+                        <p class="mt-2 text-sm text-gray-600">Aceptamos transferencias, pagos con tarjeta y visacuotas sin recargo. Emitimos
+                            factura electrónica.</p>
                     </details>
                 </div>
             </div>
