--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
             </nav>
 
             <div class="flex items-center gap-3">
-                <a href="https://wa.me/50242911090?text=Hola%20InstaBloom%2C%20quiero%20cotizar%20un%20evento%20para%20[fecha]%20con%20[servicio]."
+                <a href="https://wa.me/50242911090?text=Hola%20InstaBloom%2C%20quiero%20informaci%C3%B3n%20sobre%20sus%20paquetes..."
                     target="_blank"
                     class="inline-flex items-center gap-2 px-4 py-2 rounded-full bg-[color:var(--brand-pink)] text-white text-sm font-semibold shadow hover:scale-[1.02] transition">💬
                     Cotizar por WhatsApp</a>
@@ -113,7 +113,7 @@
                 <p class="mt-2 text-white/80 text-sm">Paquetes desde Q1,500</p>
 
                 <div class="mt-8 flex flex-col sm:flex-row gap-3 justify-center">
-                    <a href="https://wa.me/50242911090?text=Hola%20InstaBloom%2C%20quiero%20cotizar%20un%20evento%20para%20[fecha]%20con%20[servicio]."
+                    <a href="https://wa.me/50242911090?text=Hola%20InstaBloom%2C%20quiero%20informaci%C3%B3n%20sobre%20sus%20paquetes..."
                         target="_blank"
                         class="inline-flex items-center justify-center px-6 py-3 rounded-full bg-[color:var(--brand-pink)] text-[color:var(--brand-red)] font-semibold shadow-md">💬
                         Cotizar por WhatsApp</a>
@@ -159,7 +159,7 @@
 
                 <div class="grid gap-6 sm:grid-cols-3 items-start">
                     <!-- The Flower Wall Experience -->
-                    <div class="rounded-lg p-6 bg-white shadow h-full">
+                    <div class="rounded-lg p-6 bg-white shadow-lg hover:shadow-xl transition-shadow h-full">
                         <h3 class="text-lg font-semibold text-[color:var(--brand-red)]">The Flower Wall Experience</h3>
                         <p class="text-sm text-gray-600 mt-1">Backdrops premium para fotos inolvidables.</p>
                         <p class="text-sm font-semibold text-[color:var(--brand-red)] mt-3">Desde Q1,500</p>
@@ -170,7 +170,7 @@
                             <li>• Montaje y desmontaje incluido</li>
                         </ul>
                         <div class="mt-6 text-center">
-                            <a href="https://wa.me/50242911090?text=Hola%20InstaBloom%2C%20quiero%20cotizar%20un%20evento%20para%20[fecha]%20con%20[servicio]."
+                            <a href="https://wa.me/50242911090?text=Hola%20InstaBloom%2C%20quiero%20informaci%C3%B3n%20del%20paquete%20The%20Flower%20Wall%20Experience"
                                 target="_blank"
                                 class="inline-block px-4 py-2 rounded-full bg-[color:var(--brand-pink)] text-[color:var(--brand-red)] font-semibold text-sm">Cotizar
                                 por WhatsApp</a>
@@ -178,7 +178,7 @@
                     </div>
 
                     <!-- The InstaBloom Experience (Highlighted - Center) -->
-                    <div class="rounded-xl p-7 bg-white shadow-xl border-2 border-[color:var(--brand-pink)] transform scale-105 relative sm:order-first lg:order-none">
+                    <div class="rounded-xl p-7 bg-white shadow-2xl border-2 border-[color:var(--brand-pink)] transform scale-105 relative sm:order-first lg:order-none hover:shadow-2xl transition-shadow">
                         <!-- Badge Más solicitado -->
                         <div class="absolute -top-3 left-1/2 transform -translate-x-1/2">
                             <span class="inline-block bg-[color:var(--brand-red)] text-white font-bold text-xs px-4 py-1.5 rounded-full shadow-md">⭐ Más solicitado</span>
@@ -196,7 +196,7 @@
                                 <li>• Montaje y desmontaje profesional</li>
                             </ul>
                             <div class="mt-6 text-center">
-                                <a href="https://wa.me/50242911090?text=Hola%20InstaBloom%2C%20quiero%20cotizar%20un%20evento%20para%20[fecha]%20con%20[servicio]."
+                                <a href="https://wa.me/50242911090?text=Hola%20InstaBloom%2C%20quiero%20informaci%C3%B3n%20del%20paquete%20The%20InstaBloom%20Experience"
                                     target="_blank"
                                     class="inline-block px-4 py-2 rounded-full bg-[color:var(--brand-red)] text-white font-semibold text-sm hover:bg-[#a01119] transition">Cotizar
                                     por WhatsApp</a>
@@ -205,7 +205,7 @@
                     </div>
 
                     <!-- The InstaBooth Experience -->
-                    <div class="rounded-lg p-6 bg-white shadow h-full">
+                    <div class="rounded-lg p-6 bg-white shadow-lg hover:shadow-xl transition-shadow h-full">
                         <h3 class="text-lg font-semibold text-[color:var(--brand-red)]">The InstaBooth Experience</h3>
                         <p class="text-sm text-gray-600 mt-1">Photobooth interactivo sin fondo.</p>
                         <p class="text-sm font-semibold text-[color:var(--brand-red)] mt-3">Desde Q2,800</p>
@@ -217,7 +217,7 @@
                             <li>• Interfaz personalizada</li>
                         </ul>
                         <div class="mt-6 text-center">
-                            <a href="https://wa.me/50242911090?text=Hola%20InstaBloom%2C%20quiero%20cotizar%20un%20evento%20para%20[fecha]%20con%20[servicio]."
+                            <a href="https://wa.me/50242911090?text=Hola%20InstaBloom%2C%20quiero%20informaci%C3%B3n%20del%20paquete%20The%20InstaBooth%20Experience"
                                 target="_blank"
                                 class="inline-block px-4 py-2 rounded-full bg-[color:var(--brand-pink)] text-[color:var(--brand-red)] font-semibold text-sm">Cotizar
                                 por WhatsApp</a>
@@ -267,7 +267,7 @@
                 <p class="mt-3 text-sm opacity-90">Escríbenos por WhatsApp y especifica fecha y servicio para recibir
                     una cotización rápida.</p>
                 <div class="mt-6">
-                    <a href="https://wa.me/50242911090?text=Hola%20InstaBloom%2C%20quiero%20cotizar%20un%20evento%20para%20[fecha]%20con%20[servicio]."
+                    <a href="https://wa.me/50242911090?text=Hola%20InstaBloom%2C%20quiero%20informaci%C3%B3n%20sobre%20sus%20paquetes..."
                         target="_blank"
                         class="inline-flex items-center gap-3 px-6 py-3 rounded-full bg-[color:var(--brand-pink)] text-[color:var(--brand-red)] font-bold shadow-lg">💬
                         Cotizar por WhatsApp</a>
@@ -291,7 +291,7 @@
             <div>
                 <h4 class="font-semibold">Contacto</h4>
                 <p class="text-sm text-gray-600">WhatsApp: <a
-                        href="https://wa.me/50242911090?text=Hola%20InstaBloom%2C%20quiero%20cotizar%20un%20evento%20para%20[fecha]%20con%20[servicio]."
+                        href="https://wa.me/50242911090?text=Hola%20InstaBloom%2C%20quiero%20informaci%C3%B3n%20sobre%20sus%20paquetes..."
                         target="_blank" class="underline">+502 4291 1090</a></p>
                 <p class="text-sm text-gray-600">Instagram: <a href="https://www.instagram.com/instabloom_gt"
                         target="_blank" class="underline">@instabloom_gt</a></p>
