add social media links

--- a/index.html
+++ b/index.html
@@ -277,6 +277,35 @@
                         target="_blank" class="underline">Instagram</a>.</p>
             </div>
         </section>
+
+        <!-- Síguenos -->
+        <section class="py-12 bg-white">
+            <div class="max-w-3xl mx-auto px-4 text-center">
+                <h2 class="text-2xl font-bold text-gray-800 mb-8">Síguenos en nuestras redes</h2>
+                <div class="flex flex-col items-center justify-center gap-8">
+                    <!-- Instagram -->
+                    <a href="https://www.instagram.com/instabloom_gt" target="_blank" 
+                        class="inline-flex flex-col items-center gap-3 hover:opacity-80 transition">
+                        <div class="w-16 h-16 rounded-full bg-gradient-to-br from-pink-400 to-red-500 text-white flex items-center justify-center shadow-lg hover:scale-110 transition-transform">
+                            <svg class="w-8 h-8" fill="currentColor" viewBox="0 0 24 24">
+                                <path d="M12 2.163c3.204 0 3.584.012 4.85.07 3.252.148 4.771 1.691 4.919 4.919.058 1.266.069 1.645.069 4.849 0 3.205-.012 3.584-.07 4.849-.149 3.225-1.664 4.771-4.919 4.919-1.266.058-1.644.07-4.85.07-3.204 0-3.584-.012-4.849-.07-3.26-.149-4.771-1.699-4.919-4.92-.058-1.265-.07-1.644-.07-4.849 0-3.204.013-3.583.07-4.849.149-3.227 1.664-4.771 4.919-4.919 1.266-.057 1.645-.069 4.849-.069zm0-2.163c-3.259 0-3.667.014-4.947.072-4.358.2-6.78 2.618-6.98 6.98-.059 1.281-.073 1.689-.073 4.948 0 3.259.014 3.668.072 4.948.2 4.358 2.618 6.78 6.98 6.98 1.281.058 1.689.072 4.948.072 3.259 0 3.668-.014 4.948-.072 4.354-.2 6.782-2.618 6.979-6.98.059-1.28.073-1.689.073-4.948 0-3.259-.014-3.667-.072-4.947-.196-4.354-2.617-6.78-6.979-6.98-1.281-.059-1.69-.073-4.949-.073zM5.838 12a6.162 6.162 0 1112.324 0 6.162 6.162 0 01-12.324 0zM12 16a4 4 0 110-8 4 4 0 010 8zm4.965-10.322a1.44 1.44 0 110-2.881 1.44 1.44 0 010 2.881z"/>
+                            </svg>
+                        </div>
+                        <span class="text-sm font-semibold text-gray-800">@instabloom_gt</span>
+                    </a>
+                    <!-- TikTok -->
+                    <a href="https://www.tiktok.com/@instabloom.gt" target="_blank"
+                        class="inline-flex flex-col items-center gap-3 hover:opacity-80 transition">
+                        <div class="w-16 h-16 rounded-full bg-black text-white flex items-center justify-center shadow-lg hover:scale-110 transition-transform">
+                            <svg class="w-8 h-8" fill="currentColor" viewBox="0 0 24 24">
+                                <path d="M19.59 6.69a4.83 4.83 0 01-3.77-4.25V2h-3.68v13.67a2.4 2.4 0 11-2.4-2.4c.58 0 1.12.15 1.6.41V9.41a6.05 6.05 0 00-1.6-.22c-3.27 0-5.93 2.66-5.93 5.93s2.66 5.93 5.93 5.93c3.27 0 5.93-2.66 5.93-5.93V8.54a7.73 7.73 0 005.93 2.34v-3.69a4.83 4.83 0 01-3.77-1.5z"/>
+                            </svg>
+                        </div>
+                        <span class="text-sm font-semibold text-gray-800">@instabloom.gt</span>
+                    </a>
+                </div>
+            </div>
+        </section>
     </main>
 
     <!-- Footer -->
@@ -293,17 +322,12 @@
                 <p class="text-sm text-gray-600">WhatsApp: <a
                         href="https://wa.me/50242911090?text=Hola%20InstaBloom%2C%20quiero%20informaci%C3%B3n%20sobre%20sus%20paquetes..."
                         target="_blank" class="underline">+502 4291 1090</a></p>
-                <p class="text-sm text-gray-600">Instagram: <a href="https://www.instagram.com/instabloom_gt"
-                        target="_blank" class="underline">@instabloom_gt</a></p>
-                <p class="text-sm text-gray-600">TikTok: <a href="https://www.tiktok.com/@instabloom.gt" target="_blank"
-                        class="underline">@instabloom.gt</a></p>
                 <p class="text-sm text-gray-600">Email: <a href="mailto:info@instabloom.gt"
                         class="underline">info@instabloom.gt</a></p>
             </div>
 
             <div class="text-sm text-gray-600">
                 <p id="footer-desc">© <span id="year">2025</span> InstaBloom</p>
-                <p>Factura electrónica FEL</p>
             </div>
         </div>
     </footer>
