--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
         <section id="galeria" class="py-12 bg-[color:var(--cream)]">
             <div class="max-w-3xl mx-auto px-4">
                 <h2 class="text-center text-2xl font-bold mb-4">Creamos experiencias inolvidables</h2>
-                <p class="text-center text-sm text-gray-600 mb-6">Para bodas, graduaciones, cumpleaños y eventos
+                <p class="text-center text-sm text-gray-600 mb-6">Para bodas, graduaciones, despedidas de soltera, baby showers, cumpleaños y eventos
                     corporativos.</p>
 
                 <!-- Grid of placeholders -->
@@ -272,9 +272,6 @@
                         class="inline-flex items-center gap-3 px-6 py-3 rounded-full bg-[color:var(--brand-pink)] text-[color:var(--brand-red)] font-bold shadow-lg">💬
                         Cotizar por WhatsApp</a>
                 </div>
-                <p class="mt-4 text-sm opacity-80">También puedes escribirnos a <a href="mailto:info@instabloom.gt"
-                        class="underline">info@instabloom.gt</a> o en <a href="https://www.instagram.com/instabloom_gt"
-                        target="_blank" class="underline">Instagram</a>.</p>
             </div>
         </section>
 
@@ -310,25 +307,38 @@
 
     <!-- Footer -->
     <footer class="border-t border-gray-100 bg-white">
-        <div class="max-w-4xl mx-auto px-4 py-8 grid grid-cols-1 sm:grid-cols-3 gap-4">
+        <div class="max-w-4xl mx-auto px-4 py-8 grid grid-cols-1 sm:grid-cols-3 gap-8">
+            <!-- Sobre InstaBloom -->
             <div>
-                <h4 class="font-semibold">InstaBloom</h4>
-                <p class="text-sm text-gray-600">Creamos spots y PhotoBooths premium para eventos memorables en
-                    Guatemala.</p>
+                <h4 class="font-semibold text-gray-800 mb-3">Sobre InstaBloom</h4>
+                <p class="text-sm text-gray-600">Creamos experiencias visuales premium para eventos memorables en Guatemala. Backdrops instagrameables y photobooths de calidad.</p>
             </div>
 
+            <!-- Servicios -->
             <div>
-                <h4 class="font-semibold">Contacto</h4>
-                <p class="text-sm text-gray-600">WhatsApp: <a
-                        href="https://wa.me/50242911090?text=Hola%20InstaBloom%2C%20quiero%20informaci%C3%B3n%20sobre%20sus%20paquetes..."
-                        target="_blank" class="underline">+502 4291 1090</a></p>
-                <p class="text-sm text-gray-600">Email: <a href="mailto:info@instabloom.gt"
-                        class="underline">info@instabloom.gt</a></p>
+                <h4 class="font-semibold text-gray-800 mb-3">Servicios</h4>
+                <ul class="text-sm text-gray-600 space-y-2">
+                    <li><a href="#servicios" class="hover:text-[color:var(--brand-red)] transition">The Flower Wall Experience</a></li>
+                    <li><a href="#servicios" class="hover:text-[color:var(--brand-red)] transition">The InstaBooth Experience</a></li>
+                    <li><a href="#servicios" class="hover:text-[color:var(--brand-red)] transition">The InstaBloom Experience</a></li>
+                    <li><a href="#faq" class="hover:text-[color:var(--brand-red)] transition">Preguntas frecuentes</a></li>
+                </ul>
             </div>
 
-            <div class="text-sm text-gray-600">
-                <p id="footer-desc">© <span id="year">2025</span> InstaBloom</p>
+            <!-- Legal & Redes -->
+            <div>
+                <h4 class="font-semibold text-gray-800 mb-3">Conecta con nosotros</h4>
+                <ul class="text-sm text-gray-600 space-y-2">
+                    <li><a href="https://www.instagram.com/instabloom_gt" target="_blank" class="hover:text-[color:var(--brand-red)] transition">Instagram @instabloom_gt</a></li>
+                    <li><a href="https://www.tiktok.com/@instabloom.gt" target="_blank" class="hover:text-[color:var(--brand-red)] transition">TikTok @instabloom.gt</a></li>
+                    <li><a href="mailto:info@instabloom.gt" class="hover:text-[color:var(--brand-red)] transition">info@instabloom.gt</a></li>
+                </ul>
             </div>
+        </div>
+
+        <!-- Copyright -->
+        <div class="border-t border-gray-100 mt-8 pt-6 pb-4 text-center">
+            <p class="text-xs text-gray-500">© <span id="year">2025</span> InstaBloom. Todos los derechos reservados.</p>
         </div>
     </footer>
 
