--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
 
                 <div class="grid gap-6 sm:grid-cols-3 items-start">
                     <!-- The Flower Wall Experience -->
-                    <div class="rounded-lg p-6 bg-white shadow-lg hover:shadow-xl transition-shadow h-full">
+                    <div class="rounded-lg p-6 bg-white shadow-lg hover:shadow-xl transition-shadow h-full border-2 border-gray-200">
                         <h3 class="text-lg font-semibold text-[color:var(--brand-red)]">The Flower Wall Experience</h3>
                         <p class="text-sm text-gray-600 mt-1">Backdrops premium para fotos inolvidables.</p>
                         <p class="text-sm font-semibold text-[color:var(--brand-red)] mt-3">Desde Q1,500</p>
@@ -205,7 +205,7 @@
                     </div>
 
                     <!-- The InstaBooth Experience -->
-                    <div class="rounded-lg p-6 bg-white shadow-lg hover:shadow-xl transition-shadow h-full">
+                    <div class="rounded-lg p-6 bg-white shadow-lg hover:shadow-xl transition-shadow h-full border-2 border-gray-200">
                         <h3 class="text-lg font-semibold text-[color:var(--brand-red)]">The InstaBooth Experience</h3>
                         <p class="text-sm text-gray-600 mt-1">Photobooth interactivo sin fondo.</p>
                         <p class="text-sm font-semibold text-[color:var(--brand-red)] mt-3">Desde Q2,800</p>
